Movidos botones de crear y creado filtro proyectos

--- a/Honcizek/Views/Administrador/Clientes/Index.cshtml
+++ b/Honcizek/Views/Administrador/Clientes/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Listado de clientes</h1>
 
-<p>
+<p class="float-right">
     <a asp-action="Create">
         <button class="btn btn-info">Crear nuevo</button>
     </a>
