--- a/Honcizek/Views/Administrador/Partes/Index.cshtml
+++ b/Honcizek/Views/Administrador/Partes/Index.cshtml
@@ -8,7 +8,7 @@
 @if (!(bool)ViewData["error"])
 {
 
-    <div>
+    <div class="float-right">
 
         <p class="float-left">
             <a asp-action="Create" asp-route-id="@ViewData["TicketId"]">
@@ -16,16 +16,13 @@
                     Crear nuevo
                 </button>
             </a>
-        </p>
-
-        <p class="float-lg-right">
             <a asp-controller="Tickets" asp-action="Edit" asp-route-id="@ViewData["TicketId"]">
                 <button class="btn btn-primary">
                     Volver al ticket
                 </button>
             </a>
             <a asp-action="@((bool)ViewData["general"] ? "IndexUsuario":"Index")" asp-route-id="@ViewData["TicketId"]">
-                <button class="btn btn-@((bool)ViewData["general"] ? "warning":"info")">
+                <button class="btn btn-@((bool)ViewData["general"] ? "success":"warning")">
                     @((bool)ViewData["general"] ? "Ver mis trabajos":"Ver todos los trabajos")
                 </button>
             </a>
