--- a/Honcizek/Views/Administrador/Trabajadores/Index.cshtml
+++ b/Honcizek/Views/Administrador/Trabajadores/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Listado de trabajadores</h1>
 
-<p>
+<p class="float-right">
     <a asp-action="Create">
         <button class="btn btn-info">Crear nuevo
 		</button>
