--- a/Honcizek/Views/Programador/Escritorio.cshtml
+++ b/Honcizek/Views/Programador/Escritorio.cshtml
@@ -46,7 +46,7 @@
         </div>
     </div>
 </div>
-
 <form class="pt-4" asp-controller="Login" asp-action="Logout" method="post">
     <button class="btn btn-danger">Cerrar sesión</button>
 </form>
+<h2>Rol: @ViewData["hola"]</h2>
