--- a/Honcizek/Views/Administrador/Escritorio.cshtml
+++ b/Honcizek/Views/Administrador/Escritorio.cshtml
@@ -50,3 +50,4 @@
 <form class="pt-4" asp-controller="Login" asp-action="Logout" method="post">
     <button class="btn btn-danger">Cerrar sesión</button>
 </form>
+<h2>Rol: @ViewData["hola"]</h2>
