--- a/Honcizek/wwwroot/css/Login/Login.css
+++ b/Honcizek/wwwroot/css/Login/Login.css
@@ -42,7 +42,7 @@ h2 {
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    min-height: 100%;
+    min-height: 90%;
     padding: 20px;
 }
 
@@ -292,4 +292,11 @@ input[type=text], input[type=password] {
 
 #icon {
     width: 60%;
+}
+
+#cambioLogin{
+    min-height: 10%;
+    float: right;
+    padding-right: .5rem;
+    padding-top: .25rem;
 }
