--- a/Honcizek/Views/LoginC/Login.cshtml
+++ b/Honcizek/Views/LoginC/Login.cshtml
@@ -14,7 +14,9 @@
         <!-- Tabs Titles -->
         <!-- Icon -->
         <div class="fadeIn first">
+            <a id="login-link" asp-controller="Login" asp-action="Admin">
             <img id="logo" src="~/css/Login/logo_small.png" alt="" />
+            </a>
         </div>
 
  
