--- a/Honcizek/Views/Shared/Programador.cshtml
+++ b/Honcizek/Views/Shared/Programador.cshtml
@@ -27,7 +27,7 @@
                 </div>
             </a>
 
-            <a asp-controller="TicketsP" asp-action="Index">
+            <a asp-controller="TicketsP" asp-action="IndexUsuario">
                 <div class="menu-option TicketsP">
                     <span>
                         Tickets
