--- a/Honcizek/Views/Programador/Partes/Delete.cshtml
+++ b/Honcizek/Views/Programador/Partes/Delete.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.Fecha)
         </dt>
         <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.Fecha)
+            @Html.DisplayFor(model => model.FRegistro)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Hora)
@@ -51,13 +51,13 @@
             @Html.DisplayNameFor(model => model.Agente)
         </dt>
         <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.Agente.Clave)
+            @Html.DisplayFor(model => model.Agente.FullName)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Ticket)
         </dt>
         <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.Ticket.Descripcion)
+            @Html.DisplayFor(model => model.Ticket.Nombre)
         </dd class>
     </dl>
     
@@ -65,7 +65,7 @@
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Borrar" class="btn btn-danger" />
     </form>
-	<a asp-action="Index">
+	<a asp-action="Index" asp-route-id="@Model.TicketId">
 			<button class="btn btn-primary">Volver al listado</button>
 		</a>
 </div>
