--- a/Honcizek/Views/Programador/Partes/Edit.cshtml
+++ b/Honcizek/Views/Programador/Partes/Edit.cshtml
@@ -6,7 +6,6 @@
 
 <h1>Editar</h1>
 
-<h4>PartesDeTrabajo</h4>
 <hr />
 <div class="row">
     <div class="col-md-12">
@@ -14,7 +13,6 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="TicketId" />
-            <input type="hidden" asp-for="AgenteId" />
             <input type="hidden" asp-for="Fecha" />
             <input type="hidden" asp-for="Hora" />
             <div class="row col-12">
@@ -27,12 +25,12 @@
             <div class="row col-12">
                 <div class="form-group col-5">
                     <label asp-for="Horas" class="control-label"></label>
-                    <input type="number" asp-for="Horas" min="0" value="0" class="form-control" />
+                    <input type="number" asp-for="Horas" min="0" class="form-control" />
                     <span asp-validation-for="Horas" class="text-danger"></span>
                 </div>
                 <div class="form-group col-5">
                     <label asp-for="Minutos" class="control-label"></label>
-                    <input type="number" asp-for="Minutos" min="0" value="0" step="5" class="form-control" />
+                    <input type="number" asp-for="Minutos" min="0" step="5" class="form-control" />
                     <span asp-validation-for="Minutos" class="text-danger"></span>
                 </div>
             </div>
@@ -47,7 +45,7 @@
                 </div>
             </div>
             <div class="form-group pl-3">
-                <input type="submit" value="Crear" class="btn btn-info" />
+                <input type="submit" value="Guardar" class="btn btn-info" />
             </div>
         </form>
         <div class="pt-3 pl-3">
