--- a/Honcizek/Views/Programador/Proyectos/Index.cshtml
+++ b/Honcizek/Views/Programador/Proyectos/Index.cshtml
@@ -7,7 +7,26 @@
 <h1>Listado de mis proyectos</h1>
 @if (!(bool)ViewData["error"])
 {
-    <p></p>
+<form id="filtrador" class="float-left pl-3 row" asp-action="Index" method="get">
+    <div class="form-actions no-color px-3">
+        <label for="nombre">
+            Buscar nombre: <input id="filtro" type="text" name="nombre" value="@ViewData["nombreFilter"]" />
+        </label>
+        <label for="cliente">
+            Buscar cliente: <input id="filtro" type="text" name="cliente" value="@ViewData["clienteFilter"]" />
+        </label>
+    </div>
+    <div class="row pl-5 pt-3">
+        <a class="pr-2">
+            <button class="btn btn-primary">Buscar</button>
+        </a>
+        <a asp-action="Index">
+            <button class="btn btn-dark" id="limpia-filtros">
+                Limpiar filtro
+            </button>
+        </a>
+    </div>
+</form>
     <table class="table">
         <thead>
             <tr>
