--- a/Honcizek/Views/Programador/Suscripciones/Edit.cshtml
+++ b/Honcizek/Views/Programador/Suscripciones/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-12 readonly">
-        <form asp-action="Edit">
+        <form>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="row col-12">
