--- a/Honcizek/Views/Programador/Tickets/Edit.cshtml
+++ b/Honcizek/Views/Programador/Tickets/Edit.cshtml
@@ -44,6 +44,7 @@
                     <label asp-for="Estado" class="control-label"></label>
                     <select disabled asp-for="Estado" class="form-control" asp-items="ViewBag.Estado"></select>
                 </div>
+                @if (Model.Estado == "Finalizado" || Model.Estado == "Cancelado") { 
                 <div class="form-group col-4">
                     <label asp-for="FechaFinalizacion" class="control-label"></label>
                     <input disabled type="date" asp-for="FechaFinalizacion" class="form-control" />
@@ -54,6 +55,7 @@
                     <input disabled type="time" asp-for="HoraFinalizacion" class="form-control" />
                     <span asp-validation-for="HoraFinalizacion" class="text-danger"></span>
                 </div>
+                }
             </div>
             <div class="form-group col-4">
                 <label asp-for="Descripcion" class="control-label">Descripci&oacute;n</label>
@@ -71,6 +73,5 @@
 
 
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+@section Scripts {    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
