--- a/Honcizek/Views/Programador/Trabajos/Delete.cshtml
+++ b/Honcizek/Views/Programador/Trabajos/Delete.cshtml
@@ -27,13 +27,13 @@
             @Html.DisplayNameFor(model => model.Agente)
         </dt>
         <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.Agente.Clave)
+            @Html.DisplayFor(model => model.Agente.FullName)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Proyecto)
         </dt>
         <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.Proyecto.Estado)
+            @Html.DisplayFor(model => model.Proyecto.Nombre)
         </dd class>
     </dl>
     
@@ -41,7 +41,7 @@
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Borrar" class="btn btn-danger" />
     </form>
-	<a asp-action="Index">
+	<a asp-action="IndexUsuario" asp-route-id="@Model.ProyectoId">
 			<button class="btn btn-primary">Volver al listado</button>
 		</a>
 </div>
