--- a/Honcizek/Views/Programador/Trabajos/Edit.cshtml
+++ b/Honcizek/Views/Programador/Trabajos/Edit.cshtml
@@ -52,5 +52,11 @@
 
 
 @section Scripts {
+    <script type="text/javascript" src="~/js/Programador/Trabajos/Trabajos.js"></script>
+    <script>
+        $(document).ready(function () {
+            Trabajos.init();
+        });
+    </script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
