--- a/Honcizek/Views/Shared/Administrador.cshtml
+++ b/Honcizek/Views/Shared/Administrador.cshtml
@@ -28,13 +28,13 @@
                 </div>
             </a>
             <a asp-controller="Proyectos" asp-action="IndexUsuario">
-                <div class="menu-option Proyectos">
+                <div class="menu-option Proyectos Trabajos Participantes">
                     <span>Proyectos</span>
                 </div>
             </a>
 
             <a asp-controller="Tickets" asp-action="IndexUsuario">
-                <div class="menu-option Tickets">
+                <div class="menu-option Tickets Partes">
                     <span>
                         Tickets
                     </span>
