--- a/Honcizek/Views/Administrador/Partes/Create.cshtml
+++ b/Honcizek/Views/Administrador/Partes/Create.cshtml
@@ -14,7 +14,7 @@
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="TicketId" value="@ViewData["TicketId"]" />
-                <input type="hidden" asp-for="AgenteId" value="@ViewData["TicketId"]" />
+                <input type="hidden" asp-for="AgenteId" value="@ViewData["AgenteId"]" />
                 <input type="hidden" asp-for="Fecha" value="@ViewData["hoy"]" />
                 <input type="hidden" asp-for="Hora" value="@ViewData["hora"]" />
                 <div class="row col-12">
@@ -23,16 +23,13 @@
                         <input asp-for="Nombre" class="form-control" />
                         <span asp-validation-for="Nombre" class="text-danger"></span>
                     </div>
-                    <div class="form-group col-5">
-                        <label asp-for="AgenteId" class="control-label">Programador</label>
-                        <select asp-for="AgenteId" class="form-control" asp-items="ViewBag.AgenteId"></select>
-                    </div>
                 </div>
                 <div class="row col-12">
                     <div class="form-group col-5">
                         <label asp-for="Horas" class="control-label"></label>
                         <input type="number" asp-for="Horas" min="0" value="0" class="form-control" />
-                        <span asp-validation-for="Horas" class="text-danger"></span>
+                        <span asp-validation-for="Horas" class="text-danger d-none"></span>
+                        <span id="formatoHoras" class="text-danger d-none">Las horas han de ser n&uacute;meros enteros</span>
                     </div>
                     <div class="form-group col-5">
                         <label asp-for="Minutos" class="control-label"></label>
