--- a/Honcizek/Views/Administrador/Tickets/Index.cshtml
+++ b/Honcizek/Views/Administrador/Tickets/Index.cshtml
@@ -4,14 +4,14 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Listado de @(!(bool)ViewData["general"]?"mis":"") tickets</h1>
+<h1>Listado de @(!(bool)ViewData["general"]?"mis tickets pendientes":"tickets")</h1>
 @if (!(bool)ViewData["error"])
 {
 <div>
     <p class="float-right">
         <a asp-action="@((bool)ViewData["general"] ? "IndexUsuario":"Index")">
             <button class="btn btn-@((bool)ViewData["general"] ? "primary":"warning")">
-                @((bool)ViewData["general"] ? "Ver mis tickets":"Ver todos los tickets")
+                @((bool)ViewData["general"] ? "Ver mis tickets pendientes":"Ver todos los tickets")
             </button>
         </a>
     </p>
@@ -64,12 +64,15 @@
                 <th>
                     @Html.DisplayNameFor(model => model.HoraRegistro)
                 </th>
+                @if ((bool)ViewData["general"])
+                {
                 <th>
                     @Html.DisplayNameFor(model => model.FechaFinalizacion)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.HoraFinalizacion)
                 </th>
+                }
                 <th>
                     @Html.DisplayNameFor(model => model.Agente)
                 </th>
@@ -107,53 +110,56 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.HoraRegistro)
                 </td>
-                <td>
-                    @if (item.FechaFinalizacion != null)
-                    {
-                        @Html.DisplayFor(modelItem => item.FFin)
-                    }
-                    else
-                    {
-                        <span>Sin finalizar</span>
-                    }
-                </td>
-                <td>
-                    @if (item.HoraFinalizacion != null)
-                    {
-                        @Html.DisplayFor(modelItem => item.HoraFinalizacion)
-                    }
-                    else
-                    {
-                        <span>Sin finalizar</span>
-                    }
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Agente.FullName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Cliente.FullName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Suscripcion.Nombre)
-                </td>
-                <td>
-                    <a asp-controller="Partes" asp-action="IndexUsuario" asp-route-id="@item.Id">
-                        <button class="btn btn-warning">
-                            Trabajos
-                        </button>
-                    </a>
-                    <a asp-action="Edit" asp-route-id="@item.Id">
-                        <button class="btn btn-primary">
-                            Editar
-                        </button>
-                    </a>
-                    <a asp-action="Delete" asp-route-id="@item.Id">
-                        <button class="btn btn-danger">
-                            Eliminar
-                        </button>
-                    </a>
-                </td>
-            </tr>
+                @if ((bool)ViewData["general"])
+                {
+                    <td>
+                        @if (item.FechaFinalizacion != null)
+                        {
+                            @Html.DisplayFor(modelItem => item.FFin)
+                        }
+                        else
+                        {
+                            <span>Sin finalizar</span>
+                        }
+                    </td>
+                    <td>
+                        @if (item.HoraFinalizacion != null)
+                        {
+                            @Html.DisplayFor(modelItem => item.HoraFinalizacion)
+                        }
+                        else
+                        {
+                            <span>Sin finalizar</span>
+                        }
+                    </td>
+                }
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Agente.FullName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Cliente.FullName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Suscripcion.Nombre)
+                    </td>
+                    <td>
+                        <a asp-controller="Partes" asp-action="Index" asp-route-id="@item.Id">
+                            <button class="btn btn-warning">
+                                Trabajos
+                            </button>
+                        </a>
+                        <a asp-action="Edit" asp-route-id="@item.Id">
+                            <button class="btn btn-primary">
+                                Editar
+                            </button>
+                        </a>
+                        <a asp-action="Delete" asp-route-id="@item.Id">
+                            <button class="btn btn-danger">
+                                Eliminar
+                            </button>
+                        </a>
+                    </td>
+                </tr>
                 }
             }
         </tbody>
