--- a/Honcizek/Views/Administrador/Trabajadores/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Trabajadores/Edit.cshtml
@@ -26,7 +26,7 @@
                 </div>
                 <div class="form-group col-4">
                     <label asp-for="Email" class="control-label"></label>
-                    <input asp-for="Email" class="form-control" />
+                    <input type="email" asp-for="Email" class="form-control" />
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
             </div>
